@@ -1,13 +1,14 @@
 import re
 import logging
+import json
 from subprocess import Popen, PIPE
 
 logger = logging.getLogger('yledl')
 
-def is_complete(filename, ffmpeg):
+def is_complete(filename, ffmpeg, ffprobe):
     """Returns True if a video in filename has been fully downloaded."""
     try:
-        metadata = metadata_duration(filename)
+        metadata = metadata_duration(filename, ffprobe)
         actual = actual_duration(filename, ffmpeg)
         return metadata and actual and actual > 0.98*metadata
     except OSError as ex:
@@ -23,22 +24,31 @@ def actual_duration(filename, ffmpeg='ffmpeg'):
         return None
 
     timestamps = re.findall(r'time=(\d{2}):(\d{2}):(\d{2})', output)
-    if not timestamps:
+    timestamps_seconds = re.findall(r'time=(\d+)', output)
+    if not timestamps and not timestamps_seconds:
         return None
 
-    last_timestamp = timestamps[-1]
-    return (60*60*int(last_timestamp[0]) +
-            60*int(last_timestamp[1]) +
-            int(last_timestamp[2]))
+    if timestamps:
+        last_timestamp = timestamps[-1]
+        return (60*60*int(last_timestamp[0]) +
+                60*int(last_timestamp[1]) +
+                int(last_timestamp[2]))
+    else:
+        return int(timestamps_seconds[-1])
 
 
-def metadata_duration(filename):
+def metadata_duration(filename, ffprobe='ffprobe'):
     """Returns the nominal video (container) duration in seconds."""
-    p = Popen(['ffprobe', '-v', 'error', '-show_entries', 'format=duration',
-               '-of', 'default=noprint_wrappers=1:nokey=1', 'file:' + filename],
+    p = Popen([ffprobe, '-v', 'error', '-show_format', '-of', 'json',
+               'file:' + filename],
               stdout=PIPE, stderr=PIPE)
     output = p.communicate()[0]
+    if not output:
+        return None
+
     try:
-        return float(output)
-    except (ValueError, TypeError):
+        container = json.loads(output)
+        duration = container.get('format', {}).get('duration', '')
+        return float(duration)
+    except ValueError:
         return None
