@@ -4,7 +4,8 @@ Distributed under the GPL v3
 
 xx xxx 2017, Version 2.28
 
-- The wget downloader fails on some videos, use ffmpeg instead
+- The wget downloader fails on some videos, use ffmpeg instead.
+  See README.md if you use libav instead of ffmpeg.
 
 29 Oct 2017, Version 2.27
 
